objects/maps__LiveAsset__c.object
<CustomObject>
    <description>Any asset that a device can be associated with i.e. a truck, car or dumpster</description>
    <fields>
        <fullName>maps__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Is the Asset currently an active inventory/fleet item?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__AssetId__c</fullName>
        <description>Proprietary Id for identifying assets within the company</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Proprietary Id for identifying assets within the company</inlineHelpText>
        <label>Asset Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__LiveIoTDevice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Live IoT Device</label>
        <referenceTo>maps__LiveIoTDevice__c</referenceTo>
        <relationshipLabel>Maps Live Assets</relationshipLabel>
        <relationshipName>LiveAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__Make__c</fullName>
        <description>Make of Vehicle or Non-Vehicle</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Make of Vehicle or Non-Vehicle</inlineHelpText>
        <label>Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Model__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Model of Vehicle or Non-Vehicle</inlineHelpText>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__OdometerKm__c</fullName>
        <description>Last available odometer reading, in kilometers</description>
        <inlineHelpText>Last available odometer reading, in kilometers</inlineHelpText>
        <label>Odometer (km)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__OdometerMiles__c</fullName>
        <description>Last available odometer reading, in miles</description>
        <formula>ROUND(maps__OdometerKm__c * 0.62137, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Last available odometer reading, in miles</inlineHelpText>
        <label>Odometer (mi)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__SerialNumber__c</fullName>
        <description>A unique identifier for non-motorized and off-road assets</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A unique identifier for non-motorized and off-road assets</inlineHelpText>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Type__c</fullName>
        <inlineHelpText>Type of asset, Vehicle or Non Vehicle etc.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vehicle</fullName>
                </value>
                <value>
                    <fullName>Other Equipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__VIN__c</fullName>
        <description>The Vehicle Identification Number of vehicle-type assets</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Vehicle Identification Number of vehicle-type assets</inlineHelpText>
        <label>VIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Year__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The year of make/model of asset.</inlineHelpText>
        <label>Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Maps Live Asset</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Maps Live Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Live Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>